# swupdate

./: .editorconfig  .gitignore  HACKING.md  Kconfig  Makefile  Makefile.deps  Makefile.flags  REUSE.toml  meson.build
.devcontainer/: devcontainer.json
.github/workflows/: ci_tests.yml
bindings/: lua_swupdate.c  meson.build
bootloader/: Kconfig  cboot.c  ebg.c  grub.c  grub.h  meson.build  uboot.c
ci/: setup.sh  test-configs.sh
container/: Containerfile  Makefile  README.md
containers/: Kconfig  docker.c  meson.build
core/: Makefile  artifacts_versions.c  bootloader.c  cpio_utils.c  handler.c  hw-compatibility.c  install_from_file.c  installer.c  log.c  meson.build  network_thread.c  network_utils.c  parser.c  parsing_library.c  pctl.c  progress_thread.c  state.c  stream_interface.c  swupdate.c  swupdate_dict.c  swupdate_vars.c  util.c
corelib/: Makefile  channel_curl.c  downloader.c  emmc_utils.c  lua_interface.c  meson.build  mtd-interface.c  parsing_library_libconfig.c  parsing_library_libjson.c  server_utils.c  swupdate_cms_verify.c  swupdate_config.c  swupdate_decrypt_mbedtls.c  swupdate_decrypt_openssl.c  swupdate_decrypt_pkcs11.c  swupdate_gpg_verify.c  swupdate_pkcs7_verify.c  swupdate_rsa_verify.c  swupdate_rsa_verify_mbedtls.c  swupdate_settings.c  verify_signature.c  verify_signature_mbedtls.c
doc/source/: bindings.rst  bootloader_interface.rst  handlers.rst  suricatta.rst  swupdate-client.rst  swupdate-ipc-interface.rst  swupdate-progress.rst  swupdate.rst
examples/configuration/: swupdate.cfg
examples/www/v3/: index.html
examples/www/v3/css/: bootstrap.min.css  solid.min.css
examples/www/v3/js/: bootstrap.min.js  jquery.min.js
fs/: Kconfig  Makefile  btrfs.c  diskformat.c  diskio.c  fat_fs.c  luks2.c  meson.build  mke2fs.c
handlers/: Kconfig  Makefile  archive_handler.c  boot_handler.c  btrfs_handler.c  copy_handler.c  cryptsetup_handler.c  delta_downloader.c  delta_handler.c  diskformat_handler.c  diskpart_handler.c  docker_handler.c  dummy_handler.c  emmc_csd_handler.c  flash_hamming1_handler.c  flash_handler.c  handler_helpers.c  lua_scripthandler.c  meson.build  raw_handler.c  rdiff_handler.c  readback_handler.c  remote_handler.c  shell_scripthandler.c  ssbl_handler.c  swuforward-ws.c  swuforward_handler.c  swupdate.lua  ubivol_handler.c  ucfw_handler.c  uniqueuuid_handler.c  zchunk_range.c
include/: channel_curl.h  emmc_utils.h  fs_interface.h  globals.h  hw-compatibility.h  installer.h  log.h  lua_util.h  network_ipc.h  server_utils.h  sslapi.h  state.h  swupdate.h  swupdate_config.h  util.h  versions.h
include/suricatta/: server.h
ipc/: meson.build  network_ipc.c
mongoose/: meson.build  mongoose_interface.c
parser/: meson.build  parse_external.c  parser.c
suricatta/: Kconfig  meson.build  server_general.c  server_hawkbit.c  server_lua.c  suricatta.c
test/: Makefile  meson.build  test_crypt.c  test_server_hawkbit.c  test_verify.c
test/scripts/: generate_linker_flags
tools/: meson.build  swupdate-client.c  swupdate-progress.c
web-app/: index.html  package.json
web-app/scss/: bootstrap.scss
